Fixed typos for the tutorial file

--- a/tutorial/pyfdam_tutorial.ipynb
+++ b/tutorial/pyfdam_tutorial.ipynb
@@ -52,21 +52,21 @@
     "#Step 2 - Write the fixed parameters\n",
     "#Electrode thickness (cm)\n",
     "myparams.add('L',0.0242,vary=False)\n",
-    "#Conducitivity of current collector\n",
+    "#Conducitivity of current collector (S/cm)\n",
     "myparams.add('sig',8,vary=False)\n",
     "#The interfacial area (cm^2/cm^3)\n",
     "myparams.add('a',6*10**6,vary=False)\n",
     "#The cell area (cm^2).\n",
     "myparams.add('A',71.43,vary=False)\n",
     "\n",
-    "#Step 3 - \n",
+    "#Step 3 - Write the fitting parameters\n",
     "#Seperator/solution resistance, (ohm)\n",
     "myparams.add('Rext',1.0,vary=True,min=0)\n",
     "#External inductance (F/cm2)\n",
     "myparams.add('Lind',1e-5,vary=True,min=0)\n",
     "#double layer capacitance (F/cm2)\n",
     "myparams.add('Cdl',1e-5,vary=True,min=0)\n",
-    "#Conductivity of electrolyte\n",
+    "#Conductivity of electrolyte (S/cm)\n",
     "myparams.add('kap',1.0,vary=True,min=0)"
    ]
   },
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the datafile must be formatted with three columns and no headers! The first column is frequency, the second column is the real part of the impedance, and the third column is the imaginary part of the impedance. In this tutorial, the experimental data is `EIS_Com_2V.txt` so check that file for reference!. \n",
+    "Note that the datafile must be formatted with three columns and no headers! The first column is frequency, the second column is the real part of the impedance, and the third column is the imaginary part of the impedance. In this tutorial, the experimental data is `EIS_Mock_Data.txt` so check that file for reference!. \n",
     "\n",
     "Finally, we can run the fitting process using the `.run()` method. The fitting run is done by selecting a suitable numerical method as an initial error minimization step. This is then followed by some number of cycles, denoted by `ncycles`, of Leveberg-Marquadt algorithm to further converge the parameters and obtain their uncertainty."
    ]
@@ -309,10 +309,10 @@
    "metadata": {},
    "source": [
     "To run the simulation, we can use the `.run()` method which will use the Gaver-Stehfest (GV) method to perform numerical inverse Laplace transform. The `.run()` method takes in the following arguments: \n",
-    "1. `time` ($ t $) is an array of time which starts from **intial time larger than zero** (the GV method cannot handle t=0 which requeires information at infinite frequency) and up to some final time. \n",
+    "1. `time` ($ t $) is an array of time which starts from **intial time larger than zero** (the GV method cannot handle t=0) and up to some final time. \n",
     "2. `DeltaV0` ($ \\Delta V_0 $)the initial total difference in potential across cell\n",
     "3. `Iapp` ($ I_\\mathrm{app} $) is the applied current, with (-)/(+) sign indicating discharging/charging experiments respectively,\n",
-    "4. `A` ($ A $) is an optional parameter that is divided against the impedance function $ Z(s) $ This is used only if the original model is not described in the correct Ohmic units, e.g., the model impedance is multiplied by surface area, etc. By default, it is set to one. For our tutorial,`'A` will be the surface area parameter $ A $ since the original model is expressed in terms of Ohm cm^2. \n",
+    "4. `A` ($ A $) is an optional parameter that is divided against the impedance function $ Z(s) $. This is used only if the original model is not described in the correct Ohmic units, e.g., the model impedance is multiplied by surface area so we need `A` to be the cell's area. By default, it is set to one. For our tutorial, `A` will be the surface area parameter $ A $ since the original model function $ Z(s) $ is expressed in terms of Ohm cm^2. \n",
     "5. `Nterms`($ N_\\mathrm{terms} $) is a parameter for the Gaver-Stehfest method, which should be around 6 to 20 to obtain good convergence of the time-domain profile. By default, it is set to 10.\n",
     "\n",
     "Under the hood, the code is inverting the following function in Laplace space:\n",
